Final commit, latest mobile bug-fix, #2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <h1 id="first" style="text-align: center">F1 2022 Team cars comparison</h1>
         <hr>
-        <h3>All images were taken on 23/02/2022, during the early training phase in the morning, which was happening in Barcelona, Spain.</h3>
+        <h3>All images were taken on 23/02/2022, during the early training phase in the morning, which was happening in Barcelona, Spain.</h3><br>
     </div>
     <div class="slider-container">
 
