Minor design changes to improve visibility

--- a/index.html
+++ b/index.html
@@ -34,49 +34,49 @@
         <img src="/img/AlphaTauri.png" class="car-img not" id="at">
     </div>
     <div class="container">
-        <h1 id="first" style="text-align: center">F1 2022 Team cars comparison</h1>
+        <h1 id="first" class="display-2" style="text-align: center">F1 2022 Team cars comparison</h1>
         <hr>
-        <h3>All images were taken on 23/02/2022, during the early training phase in the morning, which was happening in Barcelona, Spain.</h3><br>
+        <h5 class="display-6 text-justify large text-muted" style="font-size: 160%"  >All images were taken on 23/02/2022, during the early training phase in the morning, which was happening in Barcelona, Spain.</h5><br>
 
         <div class="d-grid gap-2">
-            <button type="button" class="btn btn-outline-secondary btn-lg" id="buttonChangeOrder">Reverse order of images</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg" style="font-size: 180%" id="buttonChangeOrder">Reverse order of images</button>
         </div>
 
         <br>
     </div>
     <div id="slider-container" class="slider-wrap-normal">
         <div class="team-slider">
-            <h3>Alpha Tauri</h3>
+            <h3  class="display-3" >Alpha Tauri</h3>
             <input type="range" min="0" max="1" step="0.1" id="alphaTauri" value="0" class="custom-range">
             <label class="custom-file-label" for="alphaTauri">0%</label>
         </div>
         <div class="team-slider">
-            <h3>Alpine</h3>
+            <h3 class="display-3">Alpine</h3>
             <input type="range" min="0" max="1" step="0.1" id="alpine" value="0" class="custom-range">
             <label class="custom-file-label" for="alpine">0%</label>
         </div>
         <div class="team-slider">
-            <h3>Aston Martin</h3>
+            <h3 class="display-3">Aston Martin</h3>
             <input type="range" min="0" max="1" step="0.1" id="astonMartin" value="0" class="custom-range">
             <label class="custom-file-label" for="astonMartin">0%</label>
         </div>
         <div class="team-slider">
-            <h3>Ferrari</h3>
+            <h3 class="display-3">Ferrari</h3>
             <input type="range" min="0" max="1" step="0.1" id="ferrari" value="0" class="custom-range">
             <label class="custom-file-label" for="ferrari">0%</label>
         </div>
         <div class="team-slider">
-            <h3>McLaren</h3>
+            <h3 class="display-3">McLaren</h3>
             <input type="range" min="0" max="1" step="0.1" id="mcLaren" value="0" class="custom-range">
             <label class="custom-file-label" for="mcLaren">0%</label>
         </div>
         <div class="team-slider">
-            <h3>Mercedes</h3>
+            <h3 class="display-3">Mercedes</h3>
             <input type="range" min="0" max="1" step="0.1" id="mercedes" value="0.5" class="custom-range">
             <label class="custom-file-label" for="mercedes">50%</label>
         </div>
         <div class="team-slider">
-            <h3>Red Bull</h3>
+            <h3 class="display-3">Red Bull</h3>
             <input type="range" min="0" max="1" step="0.1" id="redBull" value="1" class="custom-range">
             <label class="custom-file-label" for="redBull">100%</label>
         </div>
